# Mineshaft

./: CMakeLists.txt  LICENSE  main.cpp
assets/fonts/: minecraft_regular_5.fnt  minecraft_regular_5.json
assets/models/: cube.mtl
include/mineshaft/: Application.h  Camera.h  Config.h  Context.h  GameSave.h  utils.h
include/mineshaft/Entity/: Entities.inc  Entity.h  Player.h
include/mineshaft/Event/: Event.h  EventDispatcher.h
include/mineshaft/Light/: Light.h
include/mineshaft/Mesh/: Mesh.h  OBJParser.h
include/mineshaft/Model/: Model.h
include/mineshaft/Shader/: Shader.h
include/mineshaft/Support/: TextRenderer.h  Worker.h
include/mineshaft/Support/Noise/: SimplexNoise.h
include/mineshaft/Texture/: BasicTexture.h  CubeTexture.h  TextureArray.h  TextureAtlas.h
include/mineshaft/World/: Biomes.def  Biomes.inc  Block.h  Blocks.def  Chunk.h  World.h  WorldGenerator.h
src/: Application.cpp  Camera.cpp  Context.cpp  GameSave.cpp  utils.cpp
src/Entity/: Entity.cpp  Player.cpp
src/Event/: Event.cpp  EventDispatcher.cpp
src/Light/: Light.cpp
src/Mesh/: Mesh.cpp  OBJParser.cpp
src/Model/: Model.cpp
src/Shader/: Shader.cpp
src/Shader/Shaders/: BasicShader.fragmentshader  BasicShader.vertexshader  BasicShaderInstanced.vertexshader  BasicShaderTextureArray.fragmentshader  BorderShader.fragmentshader  BorderShader.vertexshader  CrosshairShader.fragmentshader  CrosshairShader.vertexshader  CubeShader.fragmentshader  CubeShader.vertexshader  CubeShaderInstanced.vertexshader  NormalShader.geometryshader  NormalShader.vertexshader  SingleColorShader.fragmentshader  SingleColorShader.vertexshader  SmoothLightShader.fragmentshader  SmoothLightShader.vertexshader  WaterShader.fragmentshader  WaterShader.vertexshader
src/Support/: TextRenderer.cpp
src/Support/Noise/: SimplexNoise.cpp
src/Support/TblGenBackends/: BiomeBackend.cpp  BlockBackend.cpp
src/Texture/: BasicTexture.cpp  CubeTexture.cpp  TextureArray.cpp  TextureAtlas.cpp
src/Tools/TableGenScripts/: biomes.sh  blocks.sh
src/World/: Biomes.tg  Block.cpp  BlockFunctions.inc  Blocks.tg  Chunk.cpp  World.cpp  WorldGenerator.cpp
